tests/snapshots/codegen_snapshot_tests__std_async_time_compiled.snap
---
source: tests/codegen_snapshot_tests.rs
expression: rust_code
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
pub use crate::__incan_std::r#async;
pub use crate::__incan_std::traits::error::Error;
use ::incan_stdlib::r#async::task::JoinHandle;
use ::incan_stdlib::r#async::task::RuntimeFuture;
use ::incan_stdlib::r#async::time::TimeoutJoinOutcome as RustTimeoutJoinOutcome;
use ::incan_stdlib::r#async::time::clamp_seconds;
use ::incan_stdlib::r#async::time::clamp_millis;
use ::incan_stdlib::r#async::time::timeout_join as rust_timeout_join;
use ::incan_stdlib::r#async::time::timeout_join_ms as rust_timeout_join_ms;
use ::incan_stdlib::__private::tokio::time::sleep as tokio_sleep;
use ::incan_stdlib::__private::tokio::time::timeout as tokio_timeout;
/// Error returned when a timeout expires before the awaited task completes.
///
/// Example:
///     match await timeout(1.0, work()):
///         Ok(value) => println(value)
///         Err(err) => println(err.message())
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
pub struct TimeoutError {}
impl incan_stdlib::reflection::HasClassName for TimeoutError {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_stdlib::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_stdlib::reflection::HasTypeClassName for TimeoutError {
    fn __class_name__() -> &'static str {
        "TimeoutError"
    }
}
impl incan_stdlib::reflection::HasFieldMetadata for TimeoutError {
    fn __fields__(
        &self,
    ) -> incan_stdlib::frozen::FrozenList<incan_stdlib::reflection::FieldInfo> {
        <Self as incan_stdlib::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_stdlib::reflection::HasTypeFieldMetadata for TimeoutError {
    fn __fields__() -> incan_stdlib::frozen::FrozenList<
        incan_stdlib::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_stdlib::reflection::FieldInfo; 0] = [];
        incan_stdlib::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_stdlib::reflection::HasFieldValueReflection for TimeoutError {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![]
    }
}
impl TimeoutError {
    pub fn message(&self) -> String {
        return "operation timed out".to_string();
    }
    pub fn source(&self) -> Option<String> {
        return None::<_>;
    }
    /// Returns field metadata for this type.
    pub fn __fields__(
        &self,
    ) -> incan_stdlib::frozen::FrozenList<incan_stdlib::reflection::FieldInfo> {
        static __INCAN_FIELDS: [incan_stdlib::reflection::FieldInfo; 0] = [];
        incan_stdlib::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl Error for TimeoutError {
    fn message(&self) -> String {
        return "operation timed out".to_string();
    }
    fn source(&self) -> Option<String> {
        return None::<_>;
    }
}
/// A simple duration value for user code and documentation examples.
///
/// `std.async.time` currently accepts primitive `float`/`int` delays directly, but `Duration` remains useful as a
/// lightweight value object when your own APIs want to bundle a span of time explicitly.
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
pub struct Duration {
    pub secs: i64,
    pub nanos: i64,
}
impl incan_stdlib::reflection::HasClassName for Duration {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_stdlib::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_stdlib::reflection::HasTypeClassName for Duration {
    fn __class_name__() -> &'static str {
        "Duration"
    }
}
impl incan_stdlib::reflection::HasFieldMetadata for Duration {
    fn __fields__(
        &self,
    ) -> incan_stdlib::frozen::FrozenList<incan_stdlib::reflection::FieldInfo> {
        <Self as incan_stdlib::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_stdlib::reflection::HasTypeFieldMetadata for Duration {
    fn __fields__() -> incan_stdlib::frozen::FrozenList<
        incan_stdlib::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_stdlib::reflection::FieldInfo; 2] = [
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("secs"),
                alias: None,
                description: None,
                wire_name: incan_stdlib::frozen::FrozenStr::new("secs"),
                type_name: incan_stdlib::frozen::FrozenStr::new("int"),
                has_default: false,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("nanos"),
                alias: None,
                description: None,
                wire_name: incan_stdlib::frozen::FrozenStr::new("nanos"),
                type_name: incan_stdlib::frozen::FrozenStr::new("int"),
                has_default: false,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_stdlib::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_stdlib::reflection::HasFieldValueReflection for Duration {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            "secs" => Some(format!("{}", self.secs)),
            "nanos" => Some(format!("{}", self.nanos)),
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![
            ("secs".to_string(), format!("{}", self.secs)), ("nanos".to_string(),
            format!("{}", self.nanos))
        ]
    }
}
impl Duration {
    /// Create a duration from whole seconds.
    pub fn from_secs(secs: i64) -> Duration {
        let _ = "Create a duration from whole seconds.";
        return Duration { secs: secs, nanos: 0 };
    }
    /// Create a duration from whole milliseconds.
    pub fn from_millis(millis: i64) -> Duration {
        let _ = "Create a duration from whole milliseconds.";
        let secs = (incan_stdlib::num::py_div((millis) as f64, (1000) as f64)) as i64;
        let nanos = incan_stdlib::num::py_mod_i64(millis, 1000) * 1000000;
        return Duration {
            secs: secs,
            nanos: nanos,
        };
    }
    /// Create a duration from floating-point seconds, clamping negatives to zero.
    pub fn from_secs_f64(secs: f64) -> Duration {
        let _ = "Create a duration from floating-point seconds, clamping negatives to zero.";
        if secs <= ((0) as f64) {
            return Duration { secs: 0, nanos: 0 };
        }
        let whole = (secs) as i64;
        let fractional = secs - (whole) as f64;
        let nanos = (fractional * (1000000000) as f64) as i64;
        return Duration {
            secs: whole,
            nanos: nanos,
        };
    }
    /// Returns field metadata for this type.
    pub fn __fields__(
        &self,
    ) -> incan_stdlib::frozen::FrozenList<incan_stdlib::reflection::FieldInfo> {
        static __INCAN_FIELDS: [incan_stdlib::reflection::FieldInfo; 2] = [
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("secs"),
                alias: None,
                description: None,
                wire_name: incan_stdlib::frozen::FrozenStr::new("secs"),
                type_name: incan_stdlib::frozen::FrozenStr::new("int"),
                has_default: false,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("nanos"),
                alias: None,
                description: None,
                wire_name: incan_stdlib::frozen::FrozenStr::new("nanos"),
                type_name: incan_stdlib::frozen::FrozenStr::new("int"),
                has_default: false,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_stdlib::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
pub type TimeoutJoinOutcome<T> = RustTimeoutJoinOutcome<T>;
/// Sleep for a floating-point second duration.
///
/// Example:
///     await sleep(0.1)
pub async fn sleep(seconds: f64) {
    let _ = "\n    Sleep for a floating-point second duration.\n\n    Example:\n        await sleep(0.1)\n    ";
    let _ = tokio_sleep(clamp_seconds(seconds)).await;
}
/// Sleep for an integer millisecond duration.
///
/// Example:
///     await sleep_ms(100)
pub async fn sleep_ms(milliseconds: i64) {
    let _ = "\n    Sleep for an integer millisecond duration.\n\n    Example:\n        await sleep_ms(100)\n    ";
    let _ = tokio_sleep(clamp_millis(milliseconds)).await;
}
/// Await `task` with a floating-point second timeout.
///
/// If the deadline expires, the supplied future is cancelled by being dropped. This is cancel-safe for futures that do
/// not need to finish after their final suspension point; spawn the work first if it must be durable once spawned.
pub async fn timeout<T: Send + 'static, TaskFuture: RuntimeFuture<T>>(
    seconds: f64,
    task: TaskFuture,
) -> Result<T, TimeoutError> {
    let _ = "\n    Await `task` with a floating-point second timeout.\n\n    If the deadline expires, the supplied future is cancelled by being dropped. This is cancel-safe for futures that do\n    not need to finish after their final suspension point; spawn the work first if it must be durable once spawned.\n    ";
    let _ = match tokio_timeout(clamp_seconds(seconds), task).await {
        Ok(value) => {
            return Ok::<T, TimeoutError>(value);
        }
        Err(_err) => {
            return Err::<T, TimeoutError>(TimeoutError {});
        }
    };
}
/// Await `task` with an integer millisecond timeout.
///
/// If the deadline expires, the supplied future is cancelled by being dropped. This is cancel-safe for futures that do
/// not need to finish after their final suspension point; spawn the work first if it must be durable once spawned.
pub async fn timeout_ms<T: Send + 'static, TaskFuture: RuntimeFuture<T>>(
    milliseconds: i64,
    task: TaskFuture,
) -> Result<T, TimeoutError> {
    let _ = "\n    Await `task` with an integer millisecond timeout.\n\n    If the deadline expires, the supplied future is cancelled by being dropped. This is cancel-safe for futures that do\n    not need to finish after their final suspension point; spawn the work first if it must be durable once spawned.\n    ";
    let _ = match tokio_timeout(clamp_millis(milliseconds), task).await {
        Ok(value) => {
            return Ok::<T, TimeoutError>(value);
        }
        Err(_err) => {
            return Err::<T, TimeoutError>(TimeoutError {});
        }
    };
}
/// Wait up to `seconds` for a spawned task without cancelling it when the deadline expires.
///
/// Returns `TimeoutJoinOutcome.Completed(value)` when the task completes successfully,
/// `TimeoutJoinOutcome.JoinFailed(err)` when the task finishes with a join error, and
/// `TimeoutJoinOutcome.TimedOut(handle)` when the deadline wins. In the timeout case, `handle` remains live and can be
/// awaited, stored, or aborted explicitly. For blocking work created with `spawn_blocking()`, `abort()` can only prevent
/// work that has not started yet.
pub async fn timeout_join<T: Send + 'static>(
    seconds: f64,
    handle: JoinHandle<T>,
) -> TimeoutJoinOutcome<T> {
    let _ = "\n    Wait up to `seconds` for a spawned task without cancelling it when the deadline expires.\n\n    Returns `TimeoutJoinOutcome.Completed(value)` when the task completes successfully,\n    `TimeoutJoinOutcome.JoinFailed(err)` when the task finishes with a join error, and\n    `TimeoutJoinOutcome.TimedOut(handle)` when the deadline wins. In the timeout case, `handle` remains live and can be\n    awaited, stored, or aborted explicitly. For blocking work created with `spawn_blocking()`, `abort()` can only prevent\n    work that has not started yet.\n    ";
    return rust_timeout_join(seconds, handle).await;
}
/// Wait up to `milliseconds` for a spawned task without cancelling it when the deadline expires.
///
/// This is the millisecond-duration form of `timeout_join()`.
pub async fn timeout_join_ms<T: Send + 'static>(
    milliseconds: i64,
    handle: JoinHandle<T>,
) -> TimeoutJoinOutcome<T> {
    let _ = "\n    Wait up to `milliseconds` for a spawned task without cancelling it when the deadline expires.\n\n    This is the millisecond-duration form of `timeout_join()`.\n    ";
    return rust_timeout_join_ms(milliseconds, handle).await;
}
