tests/snapshots/codegen_snapshot_tests__std_graph_import.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
pub use crate::__incan_std::graph::DiGraph;
pub use crate::__incan_std::graph::Dag;
pub use crate::__incan_std::graph::MultiDiGraph;
pub use crate::__incan_std::graph::NodeId;
pub use crate::__incan_std::graph::EdgeId;
pub use crate::__incan_std::graph::GraphError;
fn exercise_graphs() {
    let mut graph = DiGraph::<String>::__incan_new();
    let a: NodeId = graph.add_node("a".into());
    let b: NodeId = graph.add_node("b".into());
    let _edge_result: Result<(), GraphError> = graph.add_edge(a, b);
    let _removed_edge: Result<(), GraphError> = graph.remove_edge(a, b);
    let _removed_node: Result<(), GraphError> = graph.remove_node(a);
    let _successors: Result<Vec<NodeId>, GraphError> = graph.successors(b);
    let _predecessors: Result<Vec<NodeId>, GraphError> = graph.predecessors(b);
    let _bfs: Result<Vec<NodeId>, GraphError> = graph.bfs_nodes(b);
    let _dfs: Result<Vec<NodeId>, GraphError> = graph.dfs_preorder_nodes(b);
    let _topo: Result<Vec<NodeId>, GraphError> = graph.topological_order();
    let _roots: Vec<NodeId> = graph.roots();
    let _sinks: Vec<NodeId> = graph.sinks();
    let mut dag = Dag::<String>::__incan_new();
    let root: NodeId = dag.add_node("root".into());
    let leaf: NodeId = dag.add_node("leaf".into());
    let _dag_edge: Result<(), GraphError> = dag.add_edge(root, leaf);
    let _dag_order: Vec<NodeId> = dag.topological_order();
    let mut multi = MultiDiGraph::<String>::__incan_new();
    let left: NodeId = multi.add_node("left".into());
    let right: NodeId = multi.add_node("right".into());
    let _multi_edge: Result<EdgeId, GraphError> = multi.add_edge(left, right);
    let _edges: Result<Vec<EdgeId>, GraphError> = multi.edges_between(left, right);
    let _multi_topo: Result<Vec<NodeId>, GraphError> = multi.topological_order();
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _ = exercise_graphs();
}
