tests/snapshots/codegen_snapshot_tests__std_registry_methods.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
#[inline(always)]
pub(crate) fn __incan_init_module_statics() {
    static __INCAN_STATIC_INIT_RUNNING: std::sync::atomic::AtomicBool = std::sync::atomic::AtomicBool::new(
        false,
    );
    if __INCAN_STATIC_INIT_RUNNING.load(std::sync::atomic::Ordering::Acquire) {
        return;
    }
    static __INCAN_STATIC_INIT_ONCE: std::sync::OnceLock<()> = std::sync::OnceLock::new();
    __INCAN_STATIC_INIT_ONCE
        .get_or_init(|| {
            struct __IncanStaticInitGuard<'a>(&'a std::sync::atomic::AtomicBool);
            impl Drop for __IncanStaticInitGuard<'_> {
                fn drop(&mut self) {
                    self.0.store(false, std::sync::atomic::Ordering::Release);
                }
            }
            __INCAN_STATIC_INIT_RUNNING
                .store(true, std::sync::atomic::Ordering::Release);
            let _guard = __IncanStaticInitGuard(&__INCAN_STATIC_INIT_RUNNING);
            std::sync::LazyLock::force(&methods);
            let _ = {
                let __incan_static_arg_0 = MethodId("normalize".to_string());
                let __incan_static_arg_1 = MethodSpec {
                    summary: "Normalize text".to_string(),
                };
                let __incan_static_arg_2 = "std_registry_methods.Normalizer.normalize"
                    .to_string();
                {
                    methods
                        .with_mut(|__incan_static_value| {
                            __incan_static_value
                                ._describe_method(
                                    __incan_static_arg_0,
                                    __incan_static_arg_1,
                                    __incan_static_arg_2,
                                )
                        })
                }
            };
        });
}
pub use crate::__incan_std::registry::Registry;
pub use crate::__incan_std::registry::SubjectKind;
pub use crate::__incan_std::registry::describe;
#[derive(Debug, Clone, Eq, PartialEq)]
struct MethodId(pub String);
impl incan_stdlib::reflection::HasTypeClassName for MethodId {
    fn __class_name__() -> &'static str {
        "MethodId"
    }
}
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct MethodSpec {
    summary: String,
}
impl incan_stdlib::reflection::HasClassName for MethodSpec {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_stdlib::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_stdlib::reflection::HasTypeClassName for MethodSpec {
    fn __class_name__() -> &'static str {
        "MethodSpec"
    }
}
impl incan_stdlib::reflection::HasFieldMetadata for MethodSpec {
    fn __fields__(
        &self,
    ) -> incan_stdlib::frozen::FrozenList<incan_stdlib::reflection::FieldInfo> {
        <Self as incan_stdlib::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_stdlib::reflection::HasTypeFieldMetadata for MethodSpec {
    fn __fields__() -> incan_stdlib::frozen::FrozenList<
        incan_stdlib::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_stdlib::reflection::FieldInfo; 1] = [
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("summary"),
                alias: None,
                description: None,
                wire_name: incan_stdlib::frozen::FrozenStr::new("summary"),
                type_name: incan_stdlib::frozen::FrozenStr::new("str"),
                has_default: false,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_stdlib::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_stdlib::reflection::HasFieldValueReflection for MethodSpec {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            "summary" => Some(format!("{}", self.summary)),
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![("summary".to_string(), format!("{}", self.summary))]
    }
}
pub static methods: std::sync::LazyLock<
    incan_stdlib::storage::StaticCell<Registry<MethodId, MethodSpec>>,
> = std::sync::LazyLock::new(|| incan_stdlib::storage::StaticCell::new(
    Registry::define(vec![SubjectKind::Method.clone()]),
));
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct Normalizer {}
impl incan_stdlib::reflection::HasClassName for Normalizer {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_stdlib::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_stdlib::reflection::HasTypeClassName for Normalizer {
    fn __class_name__() -> &'static str {
        "Normalizer"
    }
}
impl incan_stdlib::reflection::HasFieldMetadata for Normalizer {
    fn __fields__(
        &self,
    ) -> incan_stdlib::frozen::FrozenList<incan_stdlib::reflection::FieldInfo> {
        <Self as incan_stdlib::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_stdlib::reflection::HasTypeFieldMetadata for Normalizer {
    fn __fields__() -> incan_stdlib::frozen::FrozenList<
        incan_stdlib::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_stdlib::reflection::FieldInfo; 0] = [];
        incan_stdlib::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_stdlib::reflection::HasFieldValueReflection for Normalizer {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![]
    }
}
impl Normalizer {
    pub fn normalize(&self, value: String) -> String {
        __incan_init_module_statics();
        return incan_stdlib::strings::str_lower(
            &incan_stdlib::strings::str_strip(&value),
        );
    }
}
fn main() {
    __incan_init_module_statics();
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let entries = {
        {
            __incan_init_module_statics();
            methods
                .with_mut(|__incan_static_value| {
                    __incan_static_value.loaded_entries()
                })
        }
    };
    let normalizer = Normalizer {};
    let _ = if ::std::convert::identity(entries.len() as i64) != 1 {
        panic!("AssertionError: left != right");
    };
    let _ = if incan_stdlib::collections::list_get(&entries, (0) as i64)
        .clone()
        .subject
        .kind != SubjectKind::Method
    {
        panic!("AssertionError: left != right");
    };
    let _ = if incan_stdlib::strings::str_ne(
        &incan_stdlib::collections::list_get(&entries, (0) as i64)
            .clone()
            .subject
            .qualified_name,
        &"Normalizer.normalize",
    ) {
        panic!("AssertionError: left != right");
    };
    let _ = if incan_stdlib::strings::str_ne(
        &normalizer.normalize("  INCAN  ".to_string()),
        &"incan",
    ) {
        panic!("AssertionError: left != right");
    };
}
